fix a scroll issue on about section where touch action: none was blocking vertical scrolling on mobile device

--- a/app/components/AboutSection.module.css
+++ b/app/components/AboutSection.module.css
@@ -191,7 +191,7 @@
     padding: 1rem;
     user-select: none;
     -webkit-user-select: none;
-    touch-action: none;
+    touch-action: pan-y;
     cursor: default;
   }
   .about p {
@@ -207,7 +207,7 @@
   }
   .description {
   pointer-events: none;
-  touch-action: none;  
+  touch-action: pan-y;  
 }
 
   .highlights {
